Refactored Js code to make it more efficient and readable

--- a/templates/fasta/index.html
+++ b/templates/fasta/index.html
@@ -26,7 +26,7 @@
 	<br/>
 	<div id ="fasta_file_shower">
 	   <hr/>
-	   <div class ="fasta_file_information" id="fasta_file_data_title"></div><br/>
+	   <div class ="fasta_file_information" id="fasta_file_data_title">Your file was uploaded and saved, the content of the files are as below</div><br/>
 	   <hr/>
 	   <div class ="fasta_file_information" id="fasta_file_header"></div><br/>
        <hr/>
